k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiki
  labels:
    app: personal-wiki
